Re-write of system tests.

--- a/system-tests/config-files/file_writer_config.ini
+++ b/system-tests/config-files/file_writer_config.ini
@@ -1,8 +1,6 @@
 hdf-output-prefix="/output-files/"
-command-uri="localhost:9092/TEST_writerCommand"
-status-uri="localhost:9092/TEST_writerStatus"
-status-master-interval=2000
-kafka-error-timeout-seconds=2
-use-hdf-swmr=false
+job-pool-uri=localhost:9092/TEST_writer_jobs
 verbosity="Trace"
-log-file=/filewriter_logs/filewriter_test_streamed.log
+service-name=filewriter_test
+command-status-uri=localhost:9092/TEST_writer_commands
+kafka-error-timeout-seconds=2
