--- a/system-tests/docker-compose-writer.yml
+++ b/system-tests/docker-compose-writer.yml
@@ -6,17 +6,18 @@ services:
     network_mode: "host"
     environment:
       CONFIG_FILE: "/file_writer_config.ini"
+      LOG_FILE: "/filewriter_logs/filewriter_1.log"
     volumes:
-      - ./config-files/file_writer_config1.ini:/file_writer_config.ini
+      - ./config-files/file_writer_config.ini:/file_writer_config.ini
       - ./output-files/:/output-files/
       - ./logs/:/filewriter_logs/
-
   filewriter2:
     image: filewriter-image:latest
     network_mode: "host"
     environment:
       CONFIG_FILE: "/file_writer_config.ini"
+      LOG_FILE: "/filewriter_logs/filewriter_2.log"
     volumes:
-      - ./config-files/file_writer_config2.ini:/file_writer_config.ini
+      - ./config-files/file_writer_config.ini:/file_writer_config.ini
       - ./output-files/:/output-files/
       - ./logs/:/filewriter_logs/
