Convert lr system test.

--- a/system-tests/config-files/local_file_writer_config.ini
+++ b/system-tests/config-files/local_file_writer_config.ini
@@ -1,6 +1,6 @@
 hdf-output-prefix="./output-files/"
-command-uri="localhost:9092/TEST_writerCommand"
-status-uri="localhost:9092/TEST_writerStatus"
+job-pool-uri=localhost:9092/TEST_writer_jobs
+command-status-uri=localhost:9092/TEST_writer_commands
 status-master-interval=2000
 kafka-error-timeout-seconds=2
 verbosity="Trace"
