--- a/system-tests/requirements.txt
+++ b/system-tests/requirements.txt
@@ -5,5 +5,5 @@ docker>=3.4.1
 h5py>=2.10.0
 flatbuffers>=1.11
 black==19.3b0
-ess-streaming_data_types>=0.8.0
-file-writer-control
+ess-streaming_data_types>=0.9.5
+file-writer-control>=1.0.1
