--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,7 +6,10 @@ message(STATUS "CMAKE_BUILD_TYPE: ${CMAKE_BUILD_TYPE}")
 
 find_package(librdkafka REQUIRED)
 find_package(hdf5 REQUIRED)
-find_package(flatbuffers REQUIRED)
+find_package(flatbuffers)
+if (NOT flatbuffers_FOUND)
+  find_package(Flatbuffers)
+endif()
 find_package(fmt REQUIRED)
 find_package(h5cpp REQUIRED)
 find_package(streaming-data-types)
