--- a/src/AccessMessageMetadata/CMakeLists.txt
+++ b/src/AccessMessageMetadata/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(f142)
 add_subdirectory(ev42)
 add_subdirectory(senv)
 add_subdirectory(NDAr)
+add_subdirectory(ADAr)
 add_subdirectory(template)
 add_subdirectory(hs00)
 add_subdirectory(tdct)
