Changed writer config field to JSON config field.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -105,7 +105,8 @@ set(kafka_to_nexus_SRC
         CommandSystem/CommandListener.cpp
         CommandSystem/JobListener.cpp
         TimeUtility.cpp
-        WriterModuleConfig/Field.cpp WriterModuleConfig/Field.h WriterModuleBase.cpp)
+        JsonConfig/Field.cpp
+        JsonConfig/FieldHandler.cpp)
 
 set(kafka_to_nexus_INC
         JobCreator.h
@@ -170,7 +171,8 @@ set(kafka_to_nexus_INC
         StreamHDFInfo.h
         CommandSystem/CommandListener.h
         CommandSystem/JobListener.h
-        WriterModuleConfig/FieldHandler.cpp WriterModuleConfig/FieldHandler.h)
+        JsonConfig/Field.h
+        JsonConfig/FieldHandler.h)
 
 add_library(kafka_to_nexus__objects OBJECT
         ${kafka_to_nexus_SRC}
