"Fix" of system tests.

--- a/system-tests/config-files/file_writer_config.ini
+++ b/system-tests/config-files/file_writer_config.ini
@@ -1,6 +1,7 @@
 hdf-output-prefix="/output-files/"
 verbosity="Trace"
 service-name=filewriter_test
-job-pool-uri=localhost:9092/TEST_writer_jobs
-command-status-uri=localhost:9092/TEST_writer_commands
+job-pool-uri=kafka:9092/TEST_writer_jobs
+command-status-uri=kafka:9092/TEST_writer_commands
 kafka-error-timeout-seconds=2
+log-file=/filewriter_logs/filewriter.log
