--- a/system-tests/docker-common.yml
+++ b/system-tests/docker-common.yml
@@ -1,23 +1,20 @@
-version: '2'
-
+version: "2"
 services:
   kafka:
-    image: wurstmeister/kafka:2.12-2.5.0
-    depends_on:
-      - zookeeper
+    image: wurstmeister/kafka:2.13-2.7.0
     hostname: kafka
     ports:
-      - "9092:9092"
+      - "9093:9093"
     environment:
-      KAFKA_ADVERTISED_HOST_NAME: localhost
-      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_ADVERTISED_LISTENERS: INSIDE://kafka:9092,OUTSIDE://localhost:9093
+      KAFKA_LISTENERS: INSIDE://:9092,OUTSIDE://:9093
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
       KAFKA_MESSAGE_MAX_BYTES: 20000000
       KAFKA_BROKER_ID: 0
       KAFKA_LOG_RETENTION_MS: -1  # keep data forever, required for tests involving fake "historical" data
       KAFKA_CREATE_TOPICS: "TEST_writer_jobs:1:1,TEST_writer_commands:1:1,TEST_forwarderConfig:1:1,TEST_forwarderStatusLR:1:1,TEST_forwarderDataLR:1:1"
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
 
   zookeeper:
-    image: zookeeper:3.4
+    image: zookeeper:3.6.2
