Made duration settings more flexible.

--- a/system-tests/config-files/file_writer_config.ini
+++ b/system-tests/config-files/file_writer_config.ini
@@ -3,5 +3,5 @@ verbosity="Trace"
 service-name=filewriter_test
 job-pool-uri=kafka:9092/TEST_writer_jobs
 command-status-uri=kafka:9092/TEST_writer_commands
-kafka-error-timeout-seconds=2
+kafka-error-timeout=2s
 log-file=/filewriter_logs/filewriter.log
