--- a/system-tests/config-files/local_file_writer_config.ini
+++ b/system-tests/config-files/local_file_writer_config.ini
@@ -1,6 +1,6 @@
 hdf-output-prefix="./output-files/"
 job-pool-uri=localhost:9093/TEST_writer_jobs
 command-status-uri=localhost:9093/TEST_writer_commands
-status-master-interval=2000
-kafka-error-timeout-seconds=2
+status-master-interval=2000ms
+kafka-error-timeout=2s
 verbosity="Trace"
