--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -175,6 +175,7 @@ set(kafka_to_nexus_INC
         TimeUtility.h
         HDFOperations.h
         HDFVersionCheck.h
+        LinkAndStreamSettings.h
         StreamHDFInfo.h
         CommandSystem/CommandListener.h
         CommandSystem/FeedbackProducerBase.h
