--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,25 @@ else()
   message(FATAL_ERROR "Unrecognised option for CONAN, use AUTO, MANUAL or DISABLE")
 endif()
 
+set(SANITIZER "none" CACHE STRING "Sanitizer used to compile code with")
+set_property(CACHE SANITIZER PROPERTY STRINGS none address thread)
+if(SANITIZER STREQUAL "thread")
+  message(STATUS "Thread sanitizer selected")
+  set(SANITIZE_PARAMS "-fsanitize=thread")
+elseif(SANITIZER STREQUAL "address")
+  message(STATUS "Address sanitizer selected")
+  set(SANITIZE_PARAMS "-fsanitize=address,undefined")
+elseif(SANITIZER STREQUAL "none")
+  message(STATUS "No sanitizer selected")
+  set(SANITIZE_PARAMS "")
+else()
+  message(FATAL_ERROR "Unknown sanitizer (${SANITIZER}) selected.")
+endif()
+
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${SANITIZE_PARAMS}")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${SANITIZE_PARAMS}")
+set(CMAKE_LINKER_FLAGS "${CMAKE_LINKER_FLAGS} ${SANITIZE_PARAMS}")
+
 add_subdirectory(src)
 
 option(RUN_DOXYGEN "Run doxygen" TRUE)
