--- a/system-tests/config-files/file_writer_config.ini
+++ b/system-tests/config-files/file_writer_config.ini
@@ -1,7 +1,5 @@
-hdf-output-prefix="/output-files/"
-verbosity="Trace"
-service-name=filewriter_test
-job-pool-uri=kafka:9092/TEST_writer_jobs
-command-status-uri=kafka:9092/TEST_writer_commands
+job-pool-uri=localhost:9093/TEST_writer_jobs
+command-status-uri=localhost:9093/TEST_writer_commands
+status-master-interval=2000ms
 kafka-error-timeout=2s
-log-file=/filewriter_logs/filewriter.log
+verbosity="Trace"
