--- a/system-tests/docker-compose.yml
+++ b/system-tests/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       KAFKA_BROKER_ID: 0
       KAFKA_LOG_RETENTION_MS: -1  # keep data forever, required for tests involving fake "historical" data
       KAFKA_CREATE_TOPICS: "TEST_epicsConnectionStatus:1:1,TEST_sampleEnv:1:1,TEST_writer_jobs:1:1,TEST_writer_commands:1:1,TEST_forwarderConfig:1:1,TEST_forwarderStatusLR:1:1,TEST_forwarderDataLR:1:1"
+    depends_on:
+      - wait_for_zookeeper
 
   zookeeper:
     image: zookeeper:3.6.2
@@ -22,3 +24,5 @@ services:
   wait_for_zookeeper:
     image: dadarek/wait-for-dependencies
     command: zookeeper:2181
+    depends_on:
+      - zookeeper
