Rename system tests to integration tests

--- a/codecov.yml
+++ b/codecov.yml
@@ -3,7 +3,7 @@ fixes:
 
 ignore:
   - "src/tests"
-  - "system-tests/"
+  - "integration-tests/"
 
 comment:
   layout: "header, diff, tree, changes, sunburst"
