--- a/integration-tests/docker-compose.yml
+++ b/integration-tests/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   kafka:
-    image: wurstmeister/kafka:2.12-2.5.0
+    image: wurstmeister/kafka:2.13-2.8.1
     hostname: kafka
     ports:
       - "9093:9093"
@@ -11,7 +11,9 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INSIDE:PLAINTEXT,OUTSIDE:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INSIDE
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_MESSAGE_MAX_BYTES: 20000000
+      KAFKA_MESSAGE_MAX_BYTES: 300000000
+      KAFKA_SOCKET_REQUEST_MAX_BYTES: 300000000
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 300000000
       KAFKA_BROKER_ID: 0
       KAFKA_LOG_RETENTION_MS: -1  # keep data forever, required for tests involving fake "historical" data
       KAFKA_CREATE_TOPICS: "TEST_epicsConnectionStatus:1:1,TEST_sampleEnv:1:1,TEST_writer_jobs:1:1,TEST_writer_commands:1:1,TEST_forwarderConfig:1:1,TEST_forwarderStatusLR:1:1,TEST_forwarderDataLR:1:1"
@@ -19,7 +21,7 @@ services:
       - wait_for_zookeeper
 
   zookeeper:
-    image: zookeeper:3.6.2
+    image: zookeeper:3.8.0
 
   wait_for_zookeeper:
     image: dadarek/wait-for-dependencies
