--- a/src/AccessMessageMetadata/CMakeLists.txt
+++ b/src/AccessMessageMetadata/CMakeLists.txt
@@ -9,3 +9,6 @@ add_subdirectory(hs00)
 add_subdirectory(tdct)
 add_subdirectory(ns10)
 add_subdirectory(ep00)
+add_subdirectory(pvCn)
+add_subdirectory(pvAl)
+add_subdirectory(scal)
