add -g flag for asan.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,7 +79,7 @@ if(SANITIZER STREQUAL "thread")
   set(SANITIZE_PARAMS "-fsanitize=thread")
 elseif(SANITIZER STREQUAL "address")
   message(STATUS "Address sanitizer selected")
-  set(SANITIZE_PARAMS "-fsanitize=address,undefined")
+  set(SANITIZE_PARAMS "-fsanitize=address,undefined -g")
 elseif(SANITIZER STREQUAL "none")
   message(STATUS "No sanitizer selected")
   set(SANITIZE_PARAMS "")
