adding ev44 extractor, ev44 writer and unit tests

--- a/src/WriterModule/CMakeLists.txt
+++ b/src/WriterModule/CMakeLists.txt
@@ -1,6 +1,7 @@
 include(ModuleFunction.cmake)
 add_subdirectory(f142)
 add_subdirectory(ev42)
+add_subdirectory(ev44)
 add_subdirectory(se00)
 add_subdirectory(senv)
 add_subdirectory(NDAr)
