Local: Update vscode settings

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -19,6 +19,8 @@ RUN apt-get update \
     gdb \
     cmake \
     cppcheck \
+    doxygen \
+    graphviz \
     libsasl2-dev \
     libssl-dev \
     git \
