PR comments addressed

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -74,7 +74,6 @@ set(kafka_to_nexus_SRC
         JobCreator.cpp
         FileWriterTask.cpp
         Source.cpp
-        StatusService.cpp
         FlatbufferReader.cpp
         HDFFile.cpp
         HDFAttributes.cpp
@@ -101,6 +100,7 @@ set(kafka_to_nexus_SRC
         Status/StatusReporterBase.cpp
         Stream/PartitionFilter.cpp
         Status/StatusReporter.cpp
+        Status/StatusService.cpp
         Stream/MessageWriter.cpp
         Stream/SourceFilter.cpp
         Stream/Partition.cpp
@@ -148,7 +148,6 @@ set(kafka_to_nexus_INC
         Msg.h
         FlatbufferMessage.h
         Source.h
-        StatusService.h
         StreamerOptions.h
         StreamController.h
         URI.h
@@ -167,7 +166,7 @@ set(kafka_to_nexus_INC
         Metrics/Reporter.h
         Status/StatusInfo.h
         Status/StatusReporter.h
-        Status/StatusReporter.cpp
+        Status/StatusService.h
         Status/StatusReporterBase.h
         Stream/PartitionFilter.h
         Status/StatusReporterBase.h
