Local: Do not run cmake outside vscode devcontainer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,11 @@
 {
+    "cmake.configureOnOpen": false,
+    "search.exclude": {
+        "**/.git": true,
+        "**/_build": true,
+        "**/build": true,
+        "**/*.code-search": true
+    },
     "files.associations": {
         "array": "cpp",
         "atomic": "cpp",
