--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -68,6 +68,21 @@
         },
         {
             "type": "shell",
+            "label": "cppcheck",
+            "command": "cppcheck --xml --inline-suppr --suppress=unusedFunction --suppress=missingInclude --enable=all --inconclusive src/ >/dev/null",
+            "options": {
+                "cwd": "${workspaceFolder}"
+            },
+            "problemMatcher": [
+                "$gcc"
+            ],
+            "group": {
+                "kind": "test",
+                "isDefault": false
+            }
+        },
+        {
+            "type": "shell",
             "label": "IntegrationTests",
             "command": "docker stop integration-tests_kafka_1 integration-tests_zookeeper_1 ; source .venv/bin/activate && source ../_build/activate_run.sh && python -m pytest -s . --writer-binary=../_build",
             "options": {
