--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,7 @@
         "--cap-add=SYS_PTRACE",
         "--security-opt",
         "seccomp=unconfined",
-        "--memory=7gb"
+        "--memory=8gb"
     ],
     "customizations": {
         "vscode": {
@@ -22,9 +22,8 @@
             },
             // Extensions you want installed when the container is created.
             "extensions": [
-                "ms-vscode.cpptools", // C++
+                "ms-vscode.cpptools-extension-pack", // C++, CMake, CMake Tools
                 "matepek.vscode-catch2-test-adapter", // Test explorer
-                "ms-vscode.cmake-tools", // CMake extension
                 "ms-python.python",
                 "eamodio.gitlens"
             ]
