Progress; current error could not initalise stream

--- a/exampleconfig.ini
+++ b/exampleconfig.ini
@@ -1,5 +1,5 @@
-command-status-uri=//127.0.0.1:9092/command-topic
-job-pool-uri=//127.0.0.1:9092/job-pool-topic
+command-status-uri=//127.0.0.1:9092/Loki_writerCommand
+job-pool-uri=//127.0.0.1:9092/Loki_jobPool
 hdf-output-prefix=/Users/georgeoneill/ess-dmsc/kafka-to-nexus/
 status-master-interval=1500ms
 kafka-error-timeout=2s
