--- a/src/AccessMessageMetadata/CMakeLists.txt
+++ b/src/AccessMessageMetadata/CMakeLists.txt
@@ -6,7 +6,6 @@ add_subdirectory(se00)
 add_subdirectory(senv)
 add_subdirectory(NDAr)
 add_subdirectory(ADAr)
-add_subdirectory(template)
 add_subdirectory(hs00)
 add_subdirectory(tdct)
 add_subdirectory(ns10)
@@ -14,3 +13,4 @@ add_subdirectory(ep00)
 add_subdirectory(ep01)
 add_subdirectory(al00)
 add_subdirectory(f144)
+add_subdirectory(mdat)
