--- a/src/WriterModule/template/CMakeLists.txt
+++ b/src/WriterModule/template/CMakeLists.txt
@@ -1,3 +1,4 @@
+#[[ Line 1 and line 11 should be removed from this file when in use
 set(template_SRC
   TemplateWriter.cpp
 )
@@ -7,4 +8,4 @@ set(template_INC
 )
 
 create_writer_module(template)
-
+]]
