unit test added

--- a/src/tests/WriterModule/CMakeLists.txt
+++ b/src/tests/WriterModule/CMakeLists.txt
@@ -9,9 +9,13 @@ set(writer_module_SRC
     ns10_WriterTests.cpp
     f142_WriterTests.cpp
     ep00_WriterTests.cpp
+    mdat_WriterTests.cpp
     TemplateWriterTests.cpp
     WriterRegistrationTests.cpp
-        f144_WriterTests.cpp al00_WriterTests.cpp ep01_WriterTests.cpp)
+    f144_WriterTests.cpp
+    al00_WriterTests.cpp
+    ep01_WriterTests.cpp
+)
 
 add_library(writer_module OBJECT ${writer_module_SRC})
 target_include_directories(writer_module PRIVATE .. ../../)
