--- a/src/AccessMessageMetadata/CMakeLists.txt
+++ b/src/AccessMessageMetadata/CMakeLists.txt
@@ -6,6 +6,7 @@ add_subdirectory(se00)
 add_subdirectory(senv)
 add_subdirectory(NDAr)
 add_subdirectory(ADAr)
+add_subdirectory(template)
 add_subdirectory(hs00)
 add_subdirectory(tdct)
 add_subdirectory(ns10)
