--- a/integration-tests/requirements.txt
+++ b/integration-tests/requirements.txt
@@ -1,3 +1,4 @@
+urllib3<2.0
 pytest>=6.2.2
 confluent_kafka == 1.9.2
 docker-compose==1.29.2
@@ -7,4 +8,3 @@ flatbuffers>=1.12
 black==19.3b0
 ess-streaming_data_types>=0.21.0
 file-writer-control>=1.2.5
-
