tidy up (non-ticket changes from ECDC-3447)

--- a/src/WriterModule/template/CMakeLists.txt
+++ b/src/WriterModule/template/CMakeLists.txt
@@ -1,3 +1,4 @@
+#[[ Remove line 1 and line 10 of this file when in use
 set(template_SRC
   TemplateWriter.cpp
 )
@@ -7,4 +8,4 @@ set(template_INC
 )
 
 create_writer_module(template)
-
+]]
