Revert "Ecdc 3447 filewriter attribute module"

--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,6 @@ pipeline.gdsl
 venv
 *.log
 *.DS_Store
-.vscode/
 .venv/
+integration-tests/core
 .vscode.local/
-exampleconfig.ini
-compile_commands.json
