Refa(stream): Use single consumer for all streams

--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -23,6 +23,7 @@ set(UnitTests_SRC
         ProducerTests.cpp
         ProducerDeliveryTests.cpp
         ConsumerTests.cpp
+        ConsumerFactoryTests.cpp
         StreamControllerTests.cpp
         Metrics/MetricsRegistrarTest.cpp
         Metrics/MetricTest.cpp
